--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Comprehensive HTML Examples</title>
+<!-- Add meta tags, title, and link to styles.css here -->
 <meta charset="UTF-8">
-<meta name="description" content="????????">
-<meta name="keywords" content="??????">
-<meta name="author" content="???????????">
-
+<meta name="description" content="Company home page">
+<meta name="keywords" content="Home page, company, links">
+<meta name="author" content="Rodolfo Gil, Faris Janjua">
+<link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<header>
-<h1>Welcome to My HTML website</h1>
-</header>
+<!-- Logo, website name, and nav links go here -->
+<nav class="navbar">
+    <div class="navdiv">
+        <div class="logo"><a href="index.html">Company Name</a> </div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contacts.html">Contact</a></li>
+            <li><a href="products.html">Products</a></li>
+            <button><a href="login.html">Login</a></button>
+        </ul>
+    </div>
+</nav>
+
+<main>
+<!-- About Us Section -->
+
+
+
+<section class="about-us">
+<!-- About Us contents go here -->
+</section>
+<section class="shop-now">
+<!-- Shop Now Button (as a link to the Products page) -->
+</section>
+<!-- Customer Reviews/Testimonials Section -->
+<section class="customer-reviews">
+<!-- Add reviews as needed -->
+</section>
+</main>
+<footer>
+<!-- Copyright notice goes here -->
+</footer>
 </body>
 </html>
