--- a/login.html
+++ b/login.html
@@ -1,43 +1,152 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            font-family: cursive;
+        }
+
+        nav {
+            background-color: #eee;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Center the links */
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+            border: 1px solid #ddd; /* Add borders */
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        .container {
+            max-width: 400px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            color: #333;
+        }
+
+        .form-control {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        .btn {
+            background-color: #04AA6D;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #045649;
+        }
+
+        .signup-link {
+            text-align: center;
+            margin-top: 10px;
+            color: #555;
+        }
+
+        .signup-link a {
+            color: #04AA6D;
+            text-decoration: none;
+        }
+
+        .signup-link a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
 <body>
+
 <header>
-    THIS IS A PLACE HODLER
+    <h1>F & R Tech</h1>
 </header>
 
-<div>
-
-
-Links to other parts:
-<div>
+<nav>
     <ul>
         <li><a href="http://127.0.0.1:3000/index.html">Index</a></li>
         <li><a href="http://127.0.0.1:3000/products.html">Products</a></li>
         <li><a href="http://127.0.0.1:3000/contact.html">Contact</a></li>
-      </ul>
-</div>
+    </ul>
+</nav>
+
 <main>
-    <meta charset ="UTF-8">
-    <meta name = "viewport" content="width=device-width,initial-scale = 1.0">
-    <title>Login Form</title>
-
-    <div class = "container">
-        <form action = "">
-            <div class = "form-group">
-                <label for=" ">Email Id</label>
-                <input type="text" class = "form control" required>
+    <div class="container">
+        <form action="">
+            <div class="form-group">
+                <label for="email">Email ID</label>
+                <input type="text" id="email" class="form-control" required>
             </div>
-        
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" class="form-control" required>
+            </div>
+            <button type="submit" class="btn">Login</button>
         </form>
-
-
-
+        <div class="signup-link">
+            <p>New user? <a href="signup.html">Sign up here</a></p>
+        </div>
     </div>
 </main>
+
 <footer>
-<!-- Copyright notice goes here -->
+    <!-- Copyright notice goes here -->
 </footer>
 
+</body>
 </html>
 
