--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             box-sizing: border-box;
             background-color: #f4f4f4;
         }
-
+       
         header {
             background-color: #333;
             color: white;
@@ -113,14 +113,14 @@
 <body>
 
 <header>
-    <h1>F & R Tech</h1>
+    <h1>Travy Patty & Co</h1>
 </header>
 
 <nav>
     <ul>
-        <li><a href="http://127.0.0.1:3000/index.html">Index</a></li>
-        <li><a href="http://127.0.0.1:3000/products.html">Products</a></li>
-        <li><a href="http://127.0.0.1:3000/contact.html">Contact</a></li>
+        <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/index.html">Index</a></li>
+        <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/products.html">Products</a></li>
+        <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/contact.html">Contact</a></li>
     </ul>
 </nav>
 
