--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@
         
                 .product img {
                     width: 100%;
-                    max-height: 150px;
+                    max-height: 250px;
                     object-fit: cover;
                     border-bottom: 1px solid #000;
                     margin-bottom: 10px;
@@ -89,7 +89,7 @@
                         <td>
                             <div class="product">
                                 <img src="Trav2.png" alt="Product 1">
-                                <h2>Astro Bottom</h2>
+                                <h2>ASTROBOTTOM</h2>
                                 <p>99.99$</p>
                                 <button class="addToCartButton" onclick="addToCart('Astro Bottom')">Add to Cart</button>
                             </div>
