Fixed names and organization

--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page - Laflamme Company</title>
-    <img src="ab67616d0000b273715973050587fe3c93033aad.jpg" style="width: 25%; max-height: 300px;">
+    <img src="images/mainimage.jpg" style="width: 25%; max-height: 300px;">
 </head>
 </center>
 
@@ -88,7 +88,7 @@
                     <tr>
                         <td>
                             <div class="product">
-                                <img src="Trav2.png" alt="Product 1">
+                                <img src="images/Trav2.png" alt="Product 1">
                                 <h2>Astro Bottom</h2>
                                 <p>99.99$</p>
                                 <button class="addToCartButton" onclick="addToCart('Astro Bottom')">Add to Cart</button>
@@ -96,7 +96,7 @@
                         </td>
                         <td>
                             <div class="product">
-                                <img src="Trav3.png" alt="Product 2">
+                                <img src="images/Trav3.png" alt="Product 2">
                                 <h2>STORMY LIVIN MAJOR</h2>
                                 <p>49.99$</p>
                                 <button class="addToCartButton" onclick="addToCart('STORMI LIVIN MAJOR')">Add to Cart</button>
@@ -106,7 +106,7 @@
                     <tr>
                         <td>
                             <div class="product">
-                                <img src="TravisTshirt.png" alt="Product 3">
+                                <img src="images/TravisTshirt.png" alt="Product 3">
                                 <h2>CAN YOU DO SUM FOR ME ?</h2>
                                 <p>69.99$</p>
                                 <button class="addToCartButton" onclick="addToCart('CAN YOU DO SUM FOR ME ?')">Add to Cart</button>
@@ -114,7 +114,7 @@
                         </td>
                         <td>
                             <div class="product">
-                                <img src="Mask.png" alt="Product 4">
+                                <img src="images/Mask.png" alt="Product 4">
                                 <h2>ITS LITT!!!!!!!!!!!!</h2>
                                 <p>24.99$</p>
                                 <button class="addToCartButton" onclick="addToCart('ITS LITT')">Add to Cart</button>
