--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
 
     <nav>
         <ul>
-            <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/index.html">Index</a></li>
-            <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/products.html">Products</a></li>
-            <li><a href="http://127.0.0.1:3000/ENSF381_assignment1/contact.html">Contact</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
