--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <!-- Logo, website name, and nav links go here -->
-<nav class="navbar">
-    <div class="navdiv">
-        <div class="logo"><a href="index.html">Company Name</a> </div>
+<nav>
+    <div>
+        <div><a href="index.html">Laflamme company</a> </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contacts.html">Contact</a></li>
@@ -25,8 +25,12 @@
 
 <main>
 <!-- About Us Section -->
-
-
+<div>
+<h1>
+    About Us
+</h1>
+<p>Laflamme company is a small startup based in Calgary. We specialize in custom and high quality clothing garments and pride ourselves in  </p>
+</div>
 
 <section class="about-us">
 <!-- About Us contents go here -->
