Index nav, about us, copy right done

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <meta name="description" content="Company home page">
 <meta name="keywords" content="Home page, company, links">
 <meta name="author" content="Rodolfo Gil, Faris Janjua">
-<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <!-- Logo, website name, and nav links go here -->
 <nav>
     <div>
-        <div><a href="index.html">Laflamme company</a> </div>
+        <div>
+            <h1 float><img src="images/mainimage.jpg" width="25%" alt="company logo"><a href="index.html">Laflamme company</a></h1>
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contacts.html">Contact</a></li>
@@ -25,19 +26,23 @@
 
 <main>
 <!-- About Us Section -->
-<div>
-<h1>
-    About Us
-</h1>
-<p>Laflamme company is a small startup based in Calgary. We specialize in custom and high quality clothing garments and pride ourselves in  </p>
-</div>
-
 <section class="about-us">
 <!-- About Us contents go here -->
+    <h2>
+        <nav>About Us</nav>
+    </h2>
+    <p>
+        Laflamme company is a small startup based in Calgary.<br>
+        We specialize in custom and high quality clothing garments,<br>
+        and pride ourselves in our great customer service and quality of work!
+    </p> 
 </section>
+
 <section class="shop-now">
 <!-- Shop Now Button (as a link to the Products page) -->
+    <button><a href="products.html">Shop Now!</a></button>
 </section>
+
 <!-- Customer Reviews/Testimonials Section -->
 <section class="customer-reviews">
 <!-- Add reviews as needed -->
@@ -45,6 +50,7 @@
 </main>
 <footer>
 <!-- Copyright notice goes here -->
+<p>&copy; 2024 LaFlamme Company. All Rights Reserved.</p>
 </footer>
 </body>
 </html>
