--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
     <div>
         <div>
-            <h1 float><img src="images/mainimage.jpg" width="25%" alt="company logo"><a href="index.html">Laflamme company</a></h1>
+            <h1><img src="images/mainimage.jpg" width="25%" alt="company logo"><a href="index.html">Laflamme company</a></h1>
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -40,12 +40,49 @@
 
 <section class="shop-now">
 <!-- Shop Now Button (as a link to the Products page) -->
-    <button><a href="products.html">Shop Now!</a></button>
+    <button>
+        <a href="products.html">Shop Now!</a>
+    </button>
 </section>
 
 <!-- Customer Reviews/Testimonials Section -->
 <section class="customer-reviews">
 <!-- Add reviews as needed -->
+    <h2>Reviews</h2>
+    <table>
+        <tr>
+            <td>
+                <div>
+                    <div>
+                        <h5>William D. Rosehart</h5>
+                        <img src="images/williamRosaheart.jpg" alt="profile picture">
+                    </div>
+                    <div>
+                        <p>"Love the products. They have such high quality<br> 
+                            and they respond quickly to messeges!<br>
+                            on an unrelated side note.<br>I don't think ENSF 381 should have a final<br>
+                            A final project makes the most sense"
+                        </p>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div>
+                    <div>
+                        <h5>Melissa "Lizzo" Jefferson</h5>
+                        <img src="images/Lizzo.jpg" width="119" alt="profile picture">
+                    </div>
+                    <div>
+                        <p>"They are so good!!!!!!!!!<br> 
+                            I just love how they have all sizes!!!<br>
+                            Especially the XXXXL that fits me perfectly :)"
+                        </p>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
+    
 </section>
 </main>
 <footer>
