--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form - Laflamme Company</title>
+    <title>Login Form - Laflamme Company Contacts</title>
     
 </head>
-
-<body>
-
+<header>
+    <h1><img src="images/mainimage.jpg" width="25%" alt="company logo">Laflamme company Contacts</h1>
+</header>
+<div>
+    <nav>
+        <div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <button><a href="login.html">Login</a></button>
+            </ul>
+        </div>
+    </nav>
+</div>
+<main>
+    <h2>Send us an email!</h2>
     <div>
-        <h1>Contact Us!</h1>
         <div class="container">
                 <form action="">
                     <div class="form-group">
@@ -25,14 +37,23 @@
                 <button type="submit" class="btn">Send</button>
             </form>
         </div>
+        <p>
+            email: LaflammeCompany@Laflamme.com<br>
+            Phone: 1-587-999-9999
+        </p>
+    </div>
+    <div>
+        <h2>Check out our socials!</h2>
+        <ul>
+            <li>Instagram: <a href="https://www.instagram.com/">@LaflammeCompany</a></li>
+            <li>FaceBook: <a href="https://www.facebook.com/">@LaflammeCompany</a></li>
+        </ul>
     </div>
 
     <footer>
     <p>&copy;    2024 LaFlamme Company. All Rights Reserved.  </p>  
 
     </footer>
-
-</body>
-
+</main>
 </html>
 
