--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 <meta name="keywords" content="Home page, company, links">
 <meta name="author" content="Rodolfo Gil, Faris Janjua">
 </head>
-<body>
-<!-- Logo, website name, and nav links go here -->
-<nav>
-    <div>
+<!-- Logo, website name go here -->
+<header>
+    <h1><img src="images/mainimage.jpg" width="25%" alt="company logo">Laflamme company</h1>
+</header>
+<!-- nav links go here -->
+<div>
+    <nav>
         <div>
-            <h1><img src="images/mainimage.jpg" width="25%" alt="company logo"><a href="index.html">Laflamme company</a></h1>
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="products.html">Products</a></li>
+                <button><a href="login.html">Login</a></button>
+            </ul>
         </div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contacts.html">Contact</a></li>
-            <li><a href="products.html">Products</a></li>
-            <button><a href="login.html">Login</a></button>
-        </ul>
-    </div>
-</nav>
-
+    </nav>
+</div>
 <main>
 <!-- About Us Section -->
 <section class="about-us">
