--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!-- index.html -->
+<!-- index.html 
+    Assignment1_ENSF381_L03_Group32
+    Made by: Rodolfo Gil-Pereira(30183908)
+             Faris Janjua(30154612)-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
